About page removed ( commented out in case we change our minds ) , content shifted to home page - Home page content & styling completed - Map now clears on new search-load - File downloads now correctly ONLY dwnld the currently selected flights, not previously selected flight from past legendPane load

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,5 +1,4 @@
 main {
-    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
         sans-serif;
@@ -7,6 +6,28 @@ main {
     -moz-osx-font-smoothing: grayscale;
     text-align: left;
 }
+.home-page {
+    margin-top: 130px;
+}
 p {
     text-indent: 25px;
+    text-align: justify;
+    margin-right: auto;
+    margin-left: auto;
+    width: 70%;
+    font-size: large;
+}
+h1, h2, h3, h4, h5, h6 {
+    text-align: justify;
+    margin-right: auto;
+    margin-left: auto;
+    width: 70%;
+}
+.map-banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 64px;
+    width: 100%;
+    height: 100px;
 }
